tests/snapshots/scenarios__01.debug.snap
---
source: tests/scenarios.rs
expression: scenario
---
Scenario {
    types: [],
    sub: [],
    cast: [],
    events: [],
    no_extra: NoExtra,
}
