tests/snapshots/scenarios__02.debug.snap
---
source: tests/scenarios.rs
expression: scenario
---
Scenario {
    types: [
        TypeAlias {
            type_name: "one::two::Three",
            type_alias: MessageName(
                "TheThree",
            ),
        },
    ],
    sub: [],
    cast: [],
    events: [],
    no_extra: NoExtra,
}
