tests/snapshots/scenarios__02.yaml.snap
---
source: tests/scenarios.rs
expression: scenario
---
types:
  - use: "one::two::Three"
    as: TheThree
cast: []
events: []
