tests/snapshots/scenarios__03.yaml.snap
---
source: tests/scenarios.rs
expression: scenario
---
types:
  - use: "protocol_basic::Start"
    as: Start
  - use: "protocol_basic::Started"
    as: Started
cast:
  - a
  - b
events:
  - id: b-starts-a
    send:
      from: b
      type: Start
      data:
        literal: ~
  - id: a-reports-to-b
    require: reached
    after:
      - b-starts-a
    recv:
      type: Started
      data:
        literal: ~
      from: a
      to: b
