tests/snapshots/scenarios__04.yaml.snap
---
source: tests/scenarios.rs
expression: scenario
---
types:
  - use: "protocol_basic::KeepAlive"
    as: KeepAlive
sub:
  - load: 04/startup.yaml
    as: startup
cast:
  - a
  - b
events:
  - id: total-test-duration
    delay:
      for: 15s
      step: 1s
  - id: standard-startup-routine
    call:
      sub: startup
      cast:
        - use: a
          as: subject
        - use: b
          as: object
      input:
        dst: $component_id
        src:
          literal: the-thingy
      output:
        dst: $the_thingys_launch_id
        src:
          bind: $launch_id
  - id: the-thingy-is-alive
    require: reached
    recv:
      type: KeepAlive
      data:
        bind:
          launch_id: $the_thingys_launch_id
      from: b
      to: a
